--- a/contact us.html
+++ b/contact us.html
@@ -16,7 +16,7 @@
     <img src="jp.jpg" alt="Address" width="300" height="200">
     <footer>2024 Sahar Timori</footer>
     <br>
-    <a href="Video.html">back home</a>
+    <a href="video.html">back home</a>
 
 
 </body>
